CollegeCanteen/build_log_revert_fix.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\CartActivity.java:15: error: cannot find symbol
import com.collegecanteen.models.OrderItemRequest;
                                ^
  symbol:   class OrderItemRequest
  location: package com.collegecanteen.models
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\CartActivity.java:70: error: cannot find symbol
        List<OrderItemRequest> items = new ArrayList<>();
             ^
  symbol:   class OrderItemRequest
  location: class CartActivity
C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\CartActivity.java:72: error: cannot find symbol
            items.add(new OrderItemRequest(entry.getKey().foodId, entry.getValue()));
                          ^
  symbol:   class OrderItemRequest
  location: class CartActivity
Note: C:\PCfiles\dev\gugan\CollegeCanteen\app\src\main\java\com\collegecanteen\ui\OrderHistoryAdapter.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.10/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
14 actionable tasks: 1 executed, 13 up-to-date
